# haskellChat

./: README.md  chat.cabal  server_list.txt  stack.yaml
loadBalancerStressTest/: Main.hs
src/: ChatServer.hs  FrontendHandler.hs  LoadBalancer.hs  Main  Main.hs  Proxy.hs  Utils.hs
src/frontend/: Frontend.hs  frontend.html
src/loadbalancer/: Main.hs
stressTest/: DistributedStressTest.hs
test/chatserverTest/: ChatServerTest.hs
test/loadbalancerTest/: LoadBalancerTest.hs
