cabal-version:       2.2

name:                chat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chat#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
category:            Web
build-type:          Simple
extra-source-files:  
    README.md
    CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     
    ChatServer
    LoadBalancer
    FrontendHandler
    Utils
  build-depends:
    base >=4.7 && <5,
    network >= 3.1,
    containers >= 0.6,
    bytestring,
    stm,
    websockets >= 0.12,
    text >= 2.0,
    random >= 1.2,
    http-client >= 0.7,
    http-client-tls >= 0.3,
    wai,
    warp,
    wai-extra,
    http-types,
    wai-cors
  default-language:    Haskell2010


executable chatserver
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    ChatServer
    FrontendHandler
    Utils
  build-depends:
    base >=4.7 && <5,
    chat,
    network >= 3.1,
    containers >= 0.6,
    bytestring,
    stm,
    websockets >= 0.12,
    text >= 2.0,
    random >= 1.2,
    http-client >= 0.7,
    http-client-tls >= 0.3,
    network-uri
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
  default-language:    Haskell2010

test-suite chat-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/chatserverTest
  main-is:             ChatServerTest.hs
  build-depends:
    base >=4.7 && <5,
    chat,
    HUnit >= 1.6,
    QuickCheck >= 2.14,
    containers >= 0.6,
    text >= 2.0,
    stm,
    bytestring,
    async,
    mtl
  default-language:    Haskell2010

test-suite loadbalancer-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/loadBalancerTest
  main-is:             LoadBalancerTest.hs
  build-depends:
    base >=4.7 && <5,
    chat,
    QuickCheck >= 2.14,
    stm,
    containers,
    text,
    bytestring,
    wai,
    warp,
    wai-extra,
    http-types
  default-language:    Haskell2010

test-suite loadbalancer-stress-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      loadBalancerStressTest
  main-is:             Main.hs
  build-depends:
    base >=4.7 && <5,
    chat,
    stm,
    async,
    containers,
    text,
    bytestring,
    network,
    http-client,
    http-types,
    http-client-tls
  default-language:    Haskell2010

test-suite chat-stress-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      stressTest      
  main-is:             DistributedStressTest.hs
  build-depends:
    base >=4.7 && <5,
    chat,
    HUnit >= 1.6,
    QuickCheck >= 2.14,
    containers >= 0.6,
    text >= 2.0,
    stm,
    bytestring,
    async >= 2.2,
    mtl,
    websockets >= 0.12.7.3,
    network >= 3.1,
    network-uri,
    time
  default-language:    Haskell2010

executable loadbalancer
  hs-source-dirs:      src/loadbalancer
  main-is:             Main.hs
  build-depends:
    base >=4.7 && <5,
    chat,
    wai,
    warp,
    wai-cors,
    text,
    stm,
    bytestring,
    containers,
    http-types >= 0.12
  default-language:    Haskell2010

executable proxy
  hs-source-dirs:      src
  main-is:             Proxy.hs
  build-depends:
    base >=4.7 && <5,
    network >= 3.1,
    containers >= 0.6,
    bytestring,
    stm,
    text,
    random >= 1.2,
    time
  ghc-options:
    -Wall
  default-language:    Haskell2010

executable frontend
  hs-source-dirs: src/frontend
  main-is: Frontend.hs
  build-depends:
    base >=4.7 && <5,
    miso,
    jsaddle-warp,
    containers,
    websockets,
    aeson,
    text,
    jsaddle,
    lens
  default-language: Haskell2010



